# wpscli

./: .env.example  .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
art/: config.txt  features.txt  format.txt  framework.txt  intro.txt  outro.txt  setup.txt
config/: scope_catalog.json
descriptors/: aidocs.json  announce.json  applications.json  attendance.json  automation.json  calendars.json  chats.json  companies.json  contacts.json  cookie_contacts.json  cookie_im.json  coop_dbsheet.json  coop_files.json  create_workbench_favorite_app.json  dbsheet.json  deleted_files.json  depts.json  developer.json  devhub.json  doclib.json  doclibs.json  docqa.json  documents.json  drive_freq.json  drive_tasks.json  drives.json  event.json  files.json  free_busy_list.json  get_workbench_favorite_apps.json  groups.json  id_convert.json  index.json  links.json  low_code_app.json  mail_contacts.json  mail_messages.json  mail_migrations.json  mail_tasks.json  mailboxes.json  (+27 more)
docs/: README.md  cookie-hybrid-strategy.md  docs-framework.md  phase1-validation-report.md  wpscli-command-reference.md  wpscli-dbsheet-guide.md
registry/: personas.yaml  recipes.yaml  top_domains.yaml
scripts/: generate_docs.py  golden_cases_wps_app_files.sh  install-git-hooks.sh  show-art.sh
src/: auth.rs  auth_commands.rs  capability_domains.rs  commands.rs  descriptor.rs  doctor.rs  error.rs  executor.rs  formatter.rs  help_schema_contract.rs  link_resolver.rs  main.rs  quality.rs  schema.rs  scope_catalog.rs  secure_store.rs  services.rs  skill_gen.rs  skill_runtime.rs  ui.rs  (+1 more)
(+34 files in other folders)
