[package]
name = "wps-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wpscli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6"
dotenvy = "0.15"
hmac = "0.12"
keyring = "3.6.3"
percent-encoding = "2.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
polars = { version = "0.46", features = ["parquet"] }
sha1 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
